# agentunit

./: .codacy.yml  .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OPTIONAL_DEPENDENCIES.md  README.md  SECURITY.md  TEST_CODERABBIT.md  agentunit_paper.tex  agentunit_refs.bib  pyproject.toml  report.md  ruff.toml  test_core_functionality.py  test_platform_adapters.py
.github/: PUBLISHING_WORKFLOW.md  SECRETS_SETUP.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  example-ci.yml  publish.yml
docs/: adapters.md  api-reference.md  architecture.md  cli.md  comparison.md  examples.md  framework-integrations.md  metrics-catalog.md  nocode-quickstart.md  performance-testing.md  platform-guides.md  pytest-plugin.md  quickstart.md  telemetry.md  writing-scenarios.md
docs/architecture/: advanced-features-roadmap.md  auto-test-generation.md  multiagent-framework.md  plugin-architecture.md  production-integration.md  roadmap.md
docs/templates/: README.md  framework_scenarios.py  suite_template.py
examples/: basic_evaluation.py  replay_demo.py  retry_decorator_usage.py  run_benchmark.py
experiments/: experiment_20260106_215248.json
leaderboard_submissions/: sample_submission.json  submission_AgentMath-v1_1767769192.json  submission_AgentQA-v1_1767769194.json  submission_AgentReasoning-v1_1767769193.json
scripts/: run_dashboard.py
src/agentunit/: __init__.py  cli.py
src/agentunit/adapters/: __init__.py  agentops_adapter.py  anthropic_bedrock.py  autogen.py  autogen_ag2.py  base.py  crewai.py  haystack.py  langgraph.py  langsmith_adapter.py  llama_index.py  mistral_server.py  openai_agents.py  openai_swarm.py  phidata.py  promptflow.py  rasa.py  registry.py  semantic_kernel.py  (+2 more)
tests/: test_benchmarks.py  test_collaboration.py  test_comparison.py  test_core_functionality.py  test_dashboard.py  test_framework_adapters.py  test_generators.py  test_metrics_registry.py  test_multimodal.py  test_nocode.py  test_optimization.py  test_platform_adapters.py  test_privacy.py  test_pytest_plugin.py  test_reporting.py  test_retry_decorator.py  test_runner.py  test_suite_template.py  test_suite_template_smoke.py  test_sustainability.py
tests/eval/: __init__.py  example_scenarios.py  failing_scenario.py
tests/integration/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  ci-example.yml  conftest.py  simple_langgraph_agent.py  test_integration_basic.py  test_langgraph_integration.py
(+95 files in other folders)
