[tool.poetry]
name = "agentunit"
version = "0.7.0"
description = "A framework for evaluating, monitoring, and benchmarking multi-agent systems"
authors = ["Aviral Garg <gargaviral99@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agentunit", from = "src" }]
keywords = ["agents", "evaluation", "rag", "testing", "otel"]
homepage = "https://github.com/aviralgarg05/agentunit"
repository = "https://github.com/aviralgarg05/agentunit"
documentation = "https://github.com/aviralgarg05/agentunit/tree/main/docs"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
crewai = { version = "^0.201.1", python = "<3.14" }
langchain = ">=0.0.353,<0.4.0"  # security: stay on patched line compatible with ecosystem
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp = "^1.25.0"
huggingface-hub = "^0.21.4"
rich = "^13.7.1"
httpx = "^0.27.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
ragas = { version = ">=0.1.9", optional = true }
langgraph = { version = "^0.2.0", optional = true }

[tool.poetry.extras]
ragas = ["ragas"]
integration-tests = ["langgraph"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
sphinx = "^7.3.7"

[tool.poetry.scripts]
agentunit = "agentunit.cli:entrypoint"
agentunit-init-eval = "agentunit.pytest.cli:init_eval"

[tool.poetry.plugins."pytest11"]
agentunit = "agentunit.pytest.plugin"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/aviralgarg05/agentunit/issues"
"Changelog" = "https://github.com/aviralgarg05/agentunit/releases"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "langgraph: marks tests as requiring LangGraph (skipped if not installed)",
    "agentunit: marks test as an AgentUnit scenario evaluation",
    "scenario(name): marks test with specific scenario name",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

